<resources>
    <string name="app_name">Calculating Wombat</string>
    <string name="save_label">Save</string>
    <string name="load_label">Load</string>
    <string name="reset_label">Reset</string>
    <string name="history_label">History</string>
    <string name="exit_label">Exit</string>
    <string name="add_operand_label">Add Operand</string>
    <string name="operator_label">Operator</string>
    <string name="operand_label">Operand</string>
    <string name="ok_label">OK</string>
    <string name="cancel_label">Cancel</string>
    <string name="settings_label">Settings</string>

    <string name="clear_label">Clear</string>
    <string name="result_label">Result</string>

    <string name="apply_label">Apply</string>

    <string name="comma_label">Preferred Coma(s)</string>

    <string name="operand_fragment_label">Operand Fragment</string>

    <string name="settings_fragment_label">Settings Fragment</string>

    <string name="save_toast">Calculation Saved</string>
    <string name="alert_no">No</string>
    <string name="alert_yes">Yes</string>

    <string name="exit_confirmation">Do you want to save your calculation?</string>

    <string-array name="operator_array">
        <item name="plus">+</item>
        <item name="minus">-</item>
        <item name="kali">*</item>
        <item name="bagi">/</item>
        <item name="pangkat">^</item>
    </string-array>

    <string-array name="comma_array">
        <item name="dua">2</item>
        <item name="tiga">3</item>
        <item name="lima">5</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
