<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_file">
        <item
            android:icon="@drawable/ic_save_black_24dp"
            android:id="@+id/save_menu"
            android:title="@string/save_label" />
        <item
            android:icon="@drawable/ic_folder_open_black_24dp"
            android:id="@+id/load_menu"
            android:title="@string/load_label" />
        <item
            android:icon="@drawable/ic_not_interested_black_24dp"
            android:id="@+id/clear_menu"
            android:title="@string/reset_label" />
        <item
            android:icon="@drawable/ic_history_black_24dp"
            android:id="@+id/history_menu"
            android:title="@string/history_label" />
    </group>
    <group android:id="@+id/group_app">
        <item
            android:icon="@drawable/ic_settings_black_24dp"
            android:id="@+id/settings"
            android:title="@string/settings_label" />
        <item
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:id="@+id/exit_menu"
            android:title="@string/exit_label" />
    </group>
</menu>