<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:minWidth="300dp"
    android:padding="@dimen/content_padding">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:text="@string/settings_label"
        android:layout_margin="@dimen/spacing_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_margin" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/subtitle_size"
            android:layout_weight="1"
            android:text="@string/comma_label" />
        <Space
            android:layout_width="@dimen/spacer_width"
            android:layout_height="match_parent" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="24sp"
            android:textAlignment="center"
            android:id="@+id/comma_limit" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/spacing_margin">
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/apply_changes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:theme="@style/ButtonPrimaryTheme"
            android:text="@string/apply_label" />
        <Space
            android:layout_width="@dimen/half_spacer_width"
            android:layout_height="match_parent" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_changes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/ButtonPrimaryTheme"
            android:text="@string/cancel_label" />
    </LinearLayout>
</LinearLayout>